[gd_scene load_steps=16 format=3 uid="uid://ccp3bx5ym7r0a"]

[ext_resource type="Texture2D" uid="uid://dx37sujdws3si" path="res://assets/characters/npcs/claire/claire_sheet.png" id="1_jxphg"]
[ext_resource type="Script" path="res://assets/characters/npcs/claire/claire.gd" id="1_oorke"]
[ext_resource type="FontFile" uid="uid://bp3a33y2lkkgl" path="res://assets/menus/dialogue/fonts/IRIS Font.ttf" id="3_kv84c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ro3bq"]
atlas = ExtResource("1_jxphg")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_weddj"]
atlas = ExtResource("1_jxphg")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3gso"]
atlas = ExtResource("1_jxphg")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_progk"]
atlas = ExtResource("1_jxphg")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h07cm"]
atlas = ExtResource("1_jxphg")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wah5a"]
atlas = ExtResource("1_jxphg")
region = Rect2(80, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_of5lf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro3bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_weddj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3gso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_progk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h07cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wah5a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_v7p3k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u12cd"]
resource_name = "new_animation"
length = 1.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0, 0, 3, 3, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h31pv"]
_data = {
"RESET": SubResource("Animation_v7p3k"),
"new_animation": SubResource("Animation_u12cd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1k1o"]
size = Vector2(8, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4n8t"]
size = Vector2(10, 29)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_oorke")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_of5lf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h31pv")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_s1k1o")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_i4n8t")

[node name="item_message" type="Node2D" parent="."]
visible = false
position = Vector2(199, -110)
scale = Vector2(-1, 1)

[node name="item_message_bg" type="ColorRect" parent="item_message"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 43.0
offset_top = 69.0
offset_right = 197.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.117647, 0.176471, 1)

[node name="item_message_lbl" type="Label" parent="item_message"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = 77.0
offset_right = 189.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_kv84c")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
